# Multilingual-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_fk_ondelete_cascade.py  0003_documents_user_checksum_unique.py  0004_chat_fk_ondelete_cascade.py  0005_chat_scoped_documents.py
data/eval/: sample_qa.jsonl
data/eval/indic/: gold_kn.jsonl  gold_te.jsonl  queries_kn.jsonl  queries_te.jsonl
data/eval/xquad/: gold_en.jsonl  gold_es.jsonl  gold_hi.jsonl  gold_th.jsonl  gold_zh.jsonl  queries_en.jsonl  queries_es.jsonl  queries_hi.jsonl  queries_th.jsonl  queries_zh.jsonl
data/models/: romanized_hi_detector.joblib  romanized_indic_detector.joblib
data/samples/: panda_zh.txt
docs/: architecture.md  indic-romanized-spike.md  progress.md  skills.md
docs/m0/: chunker_ab.json  report.md  results_bge-m3.json  results_e5.json  results_e5_noprefix.json
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/app/(app)/chat/[chatId]/: page.tsx
frontend/app/(app)/documents/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/: auth-form.tsx  background-grid.tsx  command-palette.tsx  theme-toggle.tsx
frontend/components/chat/: app-shell.tsx  chat-files.tsx  chat-window.tsx  citation-chip.tsx  composer.tsx  markdown.tsx  message-bubble.tsx  session-list.tsx  sidebar.tsx  typing-indicator.tsx
frontend/components/documents/: document-manager.tsx
frontend/components/ui/: sheet.tsx
frontend/lib/: api.ts  auth.tsx  chats.tsx  sse.ts  types.ts
scripts/: build_eval_corpus.py  build_indic_romanized_eval.py  eval_romanized.py  smoke_test.py  train_romanized_detector.py
src/multilingual_rag/: __init__.py
src/multilingual_rag/api/: __init__.py  app.py  schemas.py
src/multilingual_rag/api/routes/: auth.py  chat.py  chat_documents.py  chat_stream.py  documents.py  health.py  query.py
src/multilingual_rag/auth/: dependencies.py  repository.py  security.py  service.py
src/multilingual_rag/chat/: __init__.py  repository.py  service.py
src/multilingual_rag/core/: __init__.py  config.py  errors.py  logging.py  models.py
src/multilingual_rag/db/: init.py  models.py  session.py
src/multilingual_rag/documents/: __init__.py  jobs.py  repository.py  service.py
src/multilingual_rag/embeddings/: base.py  bge_embeddings.py  factory.py  openai_embeddings.py
src/multilingual_rag/evaluation/: datasets.py  faithfulness.py  harness.py  llm_judge.py  metrics.py  run.py
src/multilingual_rag/generation/: base.py  citations.py  contextualize.py  language.py  openai_compatible_generator.py  openai_generator.py  prompts.py  streaming.py
src/multilingual_rag/ingestion/: __init__.py  chunker.py  language.py  loaders.py  service.py  service_utils.py  tokenizer.py
src/multilingual_rag/retrieval/: context.py  service.py
src/multilingual_rag/storage/: document_store.py
src/multilingual_rag/transliteration/: __init__.py  base.py  detect.py  factory.py  google.py  indicxlit.py  llm.py  muril.py  rule_based.py  script.py
src/multilingual_rag/vectorstores/: base.py  chroma_store.py  factory.py  faiss_store.py
src/multilingual_rag/workers/: celery_app.py
tests/integration/: test_auth_route.py  test_bge_embeddings.py  test_chat_route.py  test_chat_stream_route.py  test_chroma_store.py  test_chunker_cjk.py  test_db_layer.py  test_documents_route.py  test_faiss_store.py  test_health.py  test_query_route.py
tests/unit/: test_chunker.py  test_config.py  test_contextualize.py  test_document_service.py  test_document_store.py  test_embedding_factory.py  test_evaluation.py  test_generation.py  test_harness.py  test_ingestion.py  test_logging.py  test_openai_compatible_generator.py  test_openai_embeddings.py  test_retrieval.py  test_streaming.py  test_transliteration.py
