[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "multilingual-rag"
version = "0.1.0"
description = "Free-by-default multilingual RAG pipeline (local bge-m3 embeddings, ChromaDB, romanized-Hindi query support)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Multilingual RAG Team" }
]
dependencies = [
  "alembic>=1.16.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  # Sync Postgres driver for Alembic — env.py rewrites the async URL to sync for migrations.
  "psycopg2-binary>=2.9.9",
  "beautifulsoup4>=4.12.3",
  "celery>=5.5.0",
  "chromadb>=0.5.23",
  "email-validator>=2.2.0",
  # Alternative vector store (VECTOR_STORE=faiss): a local, file-based FAISS index per user.
  # filelock guards cross-process writes; numpy is already pulled in transitively.
  "faiss-cpu>=1.9.0",
  "filelock>=3.16.0",
  "fastapi>=0.115.6",
  # Romanized-Indic query transliteration. googletrans (default, unofficial Google Translate
  # web client — network-dependent) with indic-transliteration (sanscript) as the local fallback.
  "googletrans>=4.0.2",
  "indic-transliteration>=2.3.0",
  # Optional MuRIL-based romanized-Hindi detector (TRANSLITERATION_DETECTOR=muril): the LR head
  # is scikit-learn; MuRIL itself comes via transformers (already present).
  "joblib>=1.4",
  "langdetect>=1.0.9",
  "scikit-learn>=1.5",
  "openai>=1.59.7",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "pyjwt>=2.10.1",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  # Local bge-m3 embeddings (the default provider). Pulls torch (~2.5 GB) into the image —
  # slimming / embedding-as-a-service is a Phase D concern.
  "sentence-transformers>=3.0.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/multilingual_rag"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["multilingual_rag"]
